<resources>
    <string name="app_name">Cart and Notes</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="cart">Cart</string>
    <string name="add_new">Add</string>
    <string name="title_activity_add_note">AddNoteActivity</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="btn_note_save">Save</string>
    <string name="empty_title">Empty title</string>
    <string name="empty_desc">Empty description</string>
    <string name="new_cart">New cart name</string>
    <string name="cart_hint">Cart name</string>
    <string name="create_cart">Create</string>
    <string name="update_cart">Update cart</string>
    <string name="update_cart_title">Update cart</string>
    <string name="delete_cart">Delete cart</string>
    <string name="clear_cart">Clear cart</string>
    <string name="new_cart_item">New cart item</string>
    <string name="save_cart_item">Save cart item</string>
    <string name="new_item_hint">New item</string>
    <string name="update_cart_item_title">Update cart item</string>
    <string name="cart_item_name_hint">Name</string>
    <string name="cart_item_info_hint">Info</string>
    <string name="update_cart_item">Update</string>
    <string name="cart_items_counter">%1$d / %2$d</string>
    <string name="prefs_general">General</string>
    <string name="prefs_choose_note_style">Choose note style</string>
    <string name="prefs_choose_time_format">Choose time format</string>
    <string name="prefs_remove_ads">Remove ads</string>
    <string name="prefs_remove_ads_summary">Remove all ads from the application</string>
    <string name="prefs_theme">Theme</string>
    <string name="prefs_chose_theme">Choose theme</string>
    <string name="prefs_text">Text</string>
    <string name="prefs_notes_text_size">Note text size</string>
    <string name="interstitial_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>
</resources>