<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_cart_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/update_cart_item_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_cart_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cart_item_name_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/ed_cart_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/cart_item_info_hint" />

        <Button
            android:id="@+id/bt_update_cart_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_cart_item" />
    </LinearLayout>
</androidx.cardview.widget.CardView>